--- a/style.css
+++ b/style.css
@@ -1,19 +1,33 @@
 body{
-    margin: 0px;
+    margin:0;
+    padding: 0;
+}
+.fondo {
+    background-image: url(Imagenes/wallpaperflare.com_wallpaper.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    position: relative;
+}
+.contenido {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px); 
 }
 header{
     margin: 0px;
     align-items: center;
     display: flex;
-    background-color: #daa520;
+    background-color: aliceblue;
     height: 65px;
     border-style:solid;
 }
 a{
     font-weight: bolder;
-    margin-left:190px;
+    margin-left:178px;
     justify-content: space-between;
     font-size: 25px;
-    color: antiquewhite;
+    color: black;
     text-decoration: none;
 }
