--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-}
-
-.fondo {
     background-image: url('Imagenes/wallpaperflare.com_wallpaper.jpg');
     background-size: cover;
     background-position: center;
@@ -158,4 +155,97 @@ a {
 
 .medio1 {
     margin-left: 30%;
+}
+
+.reloj {
+    margin-top: 15%;
+    width: 100%;
+    height: 700px;
+    background-color: black;
+}
+
+.reloj {
+    display: flex;
+}
+
+.tarjeta-1 {
+    height: 425px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    justify-content: space-between;
+}
+
+.footer button {
+    height: 35px;
+    width: 120px;
+    margin-left: 32%;
+    border-radius: 15px;
+    background-color: rgb(73, 63, 73);
+    text-transform: uppercase;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.tarjeta-1 .contenido {
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.tarjeta-1 h2 {
+    color: white;
+}
+
+.reloj img {
+    border-radius: 5px;
+}
+
+@keyframes arriba {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-5px);
+    }
+    100% {
+        transform: translateY(-5px);
+    }
+}
+
+.contenido-1 :hover {
+    cursor: pointer;
+    animation: arriba 2s 1 forwards;
+}
+
+.tarjeta-1 button:hover {
+    cursor: pointer;
+    opacity: .75;
+    transition: 2s;
+}
+
+.relojpiola {
+    display: flex;
+    height: 800px;
+    width: 100%;
+    zoom: 100%;
+    backdrop-filter: blur(5px);
+    background-position: center;
+    background-size: cover;
+    background-image: url(Imagenes/DALL·E\ 2024-11-16\ 19.15.07\ -\ A\ futuristic\ alien\ wearing\ a\ high-tech\ wrist\ device\ inspired\ by\ alien\ technology\,\ resembling\ a\ smartwatch\ but\ bulkier.\ The\ alien\ has\ a\ sleek\,\ humanoid.webp);
+}
+
+.omnitrix {
+    margin: 20px;
+    padding: 30px;
+    align-items: center;
+    justify-content: center;
+    background-color: gray;
+    display: flex;
+    height: 500px;
+    width: 1100px;
+    border: 5px solid black;
+    border-radius: 5px;
+}
+
+.omnitrix img {
+    border-radius: 5px;
 }
