--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     background-position: center;
     height: 100vh;
     position: relative;
+    overflow-x: hidden;
 }
 
 .contenido {
@@ -227,10 +228,13 @@ a {
     height: 800px;
     width: 100%;
     zoom: 100%;
-    backdrop-filter: blur(5px);
+    font-family: "New Rocker", serif;
+    font-weight: 700;
+    font-size: xx-large;
+    font-style: italic;
+    background-image: url(Imagenes/alien.webp);
     background-position: center;
     background-size: cover;
-    background-image: url(Imagenes/DALL·E\ 2024-11-16\ 19.15.07\ -\ A\ futuristic\ alien\ wearing\ a\ high-tech\ wrist\ device\ inspired\ by\ alien\ technology\,\ resembling\ a\ smartwatch\ but\ bulkier.\ The\ alien\ has\ a\ sleek\,\ humanoid.webp);
 }
 
 .omnitrix {
@@ -238,23 +242,33 @@ a {
     padding: 30px;
     align-items: center;
     justify-content: center;
-    background-color: gray;
+    background-color: rgba(235, 235, 235, 0.514);
     display: flex;
     height: 500px;
     width: 1100px;
-    border: 5px solid black;
     border-radius: 5px;
+}
+
+.omnitrix p {
+    margin-left: 15px;
 }
 
 .omnitrix img {
     border-radius: 5px;
 }
 
+#Lanzamiento {
+    margin-top: 45%;
+}
+
+
 /*Parte Tiago Celiz*/
- .pie {
+
+.pie {
     background-image: url(imagenes/black-low-poly-geometric-background-vector.jpeg);
     color: #e1e1e1;
 }
+
 t {
     font-size: x-large;
     font-weight: bolder;
@@ -262,9 +276,10 @@ t {
     flex: content;
     align-items: center;
     padding: auto;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     justify-content: space-between;
 }
+
 n {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: medium;
@@ -272,18 +287,23 @@ n {
     margin-left: 20px;
     padding: auto;
 }
+
 .slide {
     align-items: center;
     margin-left: 30%;
     display: grid;
 }
+
 .prove {
     margin-left: 40%;
 }
+
 .ig {
     align-items: center;
     margin-left: 30%;
     display: grid;
     padding: auto;
 }
+
+
 /*FIN PARTE TIAGO CELIZ*/
